# gen-random-rs

./: Cargo.toml
src/: main.rs
