[package]
name = "gen-random"
version = "0.1.4-beta.0"
authors = ["LiosK <contact@mail.liosk.net>"]
license = "Apache-2.0"
edition = "2024"
description = "Print random bytes infinitely"
repository = "https://github.com/LiosK/gen-random-rs"
publish = false

[dependencies]
getrandom = { version = "0.2", features = ["std"] }
zerocopy = { version = "0.7", default-features = false }

[profile.release]
lto = true

[profile.dev]
opt-level = 1
